@@ -278,7 +278,7 @@ def dependencies(target):
     else:
         ffmpeg_options = {}
 
-    return (('ffmpeg-cdist', 'd0986a9', ffmpeg_options),
+    return (('ffmpeg-cdist', 'b9d9b12', ffmpeg_options),
             ('libdcp', '960fa45'),
             ('libsub', '8b82c40'))
 
