@@ -25,6 +25,11 @@
 #include "film.h"
 #include "player.h"
 #include "playlist.h"
+#include "filter.h"
+#include "audio_filter_graph.h"
+extern "C" {
+#include <libavutil/channel_layout.h>
+}
 #include <boost/foreach.hpp>
 #include <iostream>
 
@@ -39,20 +44,35 @@ using boost::dynamic_pointer_cast;
 
 int const AnalyseAudioJob::_num_points = 1024;
 
+extern "C" {
+/* I added these functions to the FFmpeg that DCP-o-matic is built with, but there isn't an
+   existing header file to put the prototype in.  Cheat by putting it in here.
+*/
+double* av_ebur128_get_true_peaks         (void* context);
+double* av_ebur128_get_sample_peaks       (void* context);
+double  av_ebur128_get_integrated_loudness(void* context);
+double  av_ebur128_get_loudness_range     (void* context);
+}
+
 AnalyseAudioJob::AnalyseAudioJob (shared_ptr<const Film> film, shared_ptr<const Playlist> playlist)
 	: Job (film)
 	, _playlist (playlist)
 	, _done (0)
 	, _samples_per_point (1)
 	, _current (0)
-	, _overall_peak (0)
-	, _overall_peak_frame (0)
+	, _sample_peak (0)
+	, _sample_peak_frame (0)
+	, _ebur128 (new AudioFilterGraph (film->audio_frame_rate(), av_get_default_channel_layout(film->audio_channels())))
 {
-
+	_filters.push_back (new Filter ("ebur128", "ebur128", "audio", "ebur128=peak=true"));
+	_ebur128->setup (_filters);
 }
 
 AnalyseAudioJob::~AnalyseAudioJob ()
 {
+	BOOST_FOREACH (Filter const * i, _filters) {
+		delete const_cast<Filter*> (i);
+	}
 	delete[] _current;
 }
 
@@ -97,12 +117,23 @@ AnalyseAudioJob::run ()
 		_done = 0;
 		DCPTime const block = DCPTime::from_seconds (1.0 / 8);
 		for (DCPTime t = start; t < length; t += block) {
-			analyse (player->get_audio (t, block, false));
+			shared_ptr<const AudioBuffers> audio = player->get_audio (t, block, false);
+			_ebur128->process (audio);
+			analyse (audio);
 			set_progress ((t.seconds() - start.seconds()) / (length.seconds() - start.seconds()));
 		}
 	}
 
-	_analysis->set_peak (_overall_peak, DCPTime::from_frames (_overall_peak_frame, _film->audio_frame_rate ()));
+	_analysis->set_sample_peak (_sample_peak, DCPTime::from_frames (_sample_peak_frame, _film->audio_frame_rate ()));
+
+	void* eb = _ebur128->get("Parsed_ebur128_0")->priv;
+	double true_peak = 0;
+	for (int i = 0; i < _film->audio_channels(); ++i) {
+		true_peak = max (true_peak, av_ebur128_get_true_peaks(eb)[i]);
+	}
+	_analysis->set_true_peak (true_peak);
+	_analysis->set_integrated_loudness (av_ebur128_get_integrated_loudness(eb));
+	_analysis->set_loudness_range (av_ebur128_get_loudness_range(eb));
 
 	if (_playlist->content().size() == 1) {
 		/* If there was only one piece of content in this analysis we may later need to know what its
@@ -138,9 +169,9 @@ AnalyseAudioJob::analyse (shared_ptr<const AudioBuffers> b)
 			_current[j][AudioPoint::RMS] += pow (s, 2);
 			_current[j][AudioPoint::PEAK] = max (_current[j][AudioPoint::PEAK], as);
 
-			if (as > _overall_peak) {
-				_overall_peak = as;
-				_overall_peak_frame = _done + i;
+			if (as > _sample_peak) {
+				_sample_peak = as;
+				_sample_peak_frame = _done + i;
 			}
 
 			if (((_done + i) % _samples_per_point) == 0) {
