@@ -54,7 +54,8 @@ using dcp::Size;
  *  @param p Pixel format of the images to process.
  */
 FilterGraph::FilterGraph ()
-	: _copy (false)
+	: _graph (0)
+	, _copy (false)
 	, _buffer_src_context (0)
 	, _buffer_sink_context (0)
 	, _frame (0)
@@ -73,28 +74,28 @@ FilterGraph::setup (vector<Filter const *> filters)
 
 	_frame = av_frame_alloc ();
 
-	AVFilterGraph* graph = avfilter_graph_alloc();
-	if (graph == 0) {
+	_graph = avfilter_graph_alloc();
+	if (!_graph) {
 		throw DecodeError (N_("could not create filter graph."));
 	}
 
-	AVFilter* buffer_src = avfilter_get_by_name(N_("buffer"));
-	if (buffer_src == 0) {
+	AVFilter* buffer_src = avfilter_get_by_name (src_name().c_str());
+	if (!buffer_src) {
 		throw DecodeError (N_("could not find buffer src filter"));
 	}
 
-	AVFilter* buffer_sink = avfilter_get_by_name(N_("buffersink"));
-	if (buffer_sink == 0) {
+	AVFilter* buffer_sink = avfilter_get_by_name (sink_name().c_str());
+	if (!buffer_sink) {
 		throw DecodeError (N_("Could not create buffer sink filter"));
 	}
 
-	if (avfilter_graph_create_filter (&_buffer_src_context, buffer_src, "in", src_parameters().c_str(), 0, graph) < 0) {
+	if (avfilter_graph_create_filter (&_buffer_src_context, buffer_src, N_("in"), src_parameters().c_str(), 0, _graph) < 0) {
 		throw DecodeError (N_("could not create buffer source"));
 	}
 
-	AVBufferSinkParams* sink_params = sink_parameters ();
+	void* sink_params = sink_parameters ();
 
-	if (avfilter_graph_create_filter (&_buffer_sink_context, buffer_sink, N_("out"), 0, sink_params, graph) < 0) {
+	if (avfilter_graph_create_filter (&_buffer_sink_context, buffer_sink, N_("out"), 0, sink_params, _graph) < 0) {
 		throw DecodeError (N_("could not create buffer sink."));
 	}
 
@@ -112,11 +113,11 @@ FilterGraph::setup (vector<Filter const *> filters)
 	inputs->pad_idx = 0;
 	inputs->next = 0;
 
-	if (avfilter_graph_parse (graph, filters_string.c_str(), inputs, outputs, 0) < 0) {
+	if (avfilter_graph_parse (_graph, filters_string.c_str(), inputs, outputs, 0) < 0) {
 		throw DecodeError (N_("could not set up filter graph."));
 	}
 
-	if (avfilter_graph_config (graph, 0) < 0) {
+	if (avfilter_graph_config (_graph, 0) < 0) {
 		throw DecodeError (N_("could not configure filter graph."));
 	}
 }
@@ -126,4 +127,14 @@ FilterGraph::~FilterGraph ()
 	if (_frame) {
 		av_frame_free (&_frame);
 	}
+
+	if (_graph) {
+		avfilter_graph_free (&_graph);
+	}
+}
+
+AVFilterContext *
+FilterGraph::get (string name)
+{
+	return avfilter_graph_get_filter (_graph, name.c_str ());
 }
