@@ -44,11 +44,15 @@ public:
 	virtual ~FilterGraph ();
 
 	void setup (std::vector<Filter const *>);
+	AVFilterContext* get (std::string name);
 
 protected:
 	virtual std::string src_parameters () const = 0;
-	virtual AVBufferSinkParams* sink_parameters () const = 0;
+	virtual std::string src_name () const = 0;
+	virtual void* sink_parameters () const = 0;
+	virtual std::string sink_name () const = 0;
 
+	AVFilterGraph* _graph;
 	/** true if this graph has no filters in, so it just copies stuff straight through */
 	bool _copy;
 	AVFilterContext* _buffer_src_context;
