@@ -28,6 +28,7 @@ sources = """
           audio_decoder_stream.cc
           audio_delay.cc
           audio_filter.cc
+          audio_filter_graph.cc
           audio_mapping.cc
           audio_point.cc
           audio_processor.cc
